--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="validation_title">Warning</string>
     <string name="delete_title">Are you sure?</string>
     <string name="delete_game_message">Are you sure you want to delete this Game?</string>
+    <string name="delete_platform_message">Are you sure you want to delete this Platform?</string>
     <string name="platform_validation_message">Name of a platform can not be empty</string>
     <string name="game_validation_message_name">Name of a game can not be empty</string>
     <string name="game_validation_message_platform">Platform of a game can not be empty</string>
@@ -17,6 +18,7 @@
     <string name="game_edit_delete">Delete game</string>
     <string name="platform_edit_name">Platform name</string>
     <string name="platform_edit_save">Save platform</string>
+    <string name="platform_edit_delete">Delete platform</string>
     <string name="drawer_games">Games</string>
     <string name="drawer_platforms">Platforms</string>
 </resources>
